media selector should be placed at the end of css file

--- a/index.html
+++ b/index.html
@@ -13,30 +13,7 @@
             border: 0;
         }
 
-        /*=======media=======*/
-        /*desktop*/
-        @media screen and (min-width: 1024px){
-            .container{
-                max-width: 1200px;
-                margin: 0 auto;
-                border-radius: 15px;
-            }
-        }
-        /*tablet*/
-        @media screen and (min-width: 450px){
-            .choice{
-                margin: 7px;
-                border-radius: 12px;
-            }
-        }
-        /*phone*/
-        @media screen and (min-width: 340px){
-            .choice{
-                margin: 5px;
-                border-radius: 10px;
 
-            }
-        }
 
         /*======page=====*/
 
@@ -99,6 +76,31 @@
             align-items: center;
 
 
+        }
+
+        /*=======media=======*/
+        /*desktop*/
+        @media screen and (min-width: 1024px){
+            .container{
+                max-width: 1200px;
+                margin: 0 auto;
+                border-radius: 15px;
+            }
+        }
+        /*tablet*/
+        @media screen and (max-width: 450px){
+            .choice{
+                margin: 7px;
+                border-radius: 12px;
+            }
+        }
+        /*phone*/
+        @media screen and (max-width: 340px){
+            .choice{
+                margin: 5px;
+                border-radius: 10px;
+
+            }
         }
     </style>
 </head>
